--- a/src/templates/layouts/home.njk
+++ b/src/templates/layouts/home.njk
@@ -27,3 +27,6 @@
     </div>
   </section>
 {% endblock %}
+{% block page_scripts %}
+  <script defer src="{{ basePath }}/home.js"></script>
+{% endblock %}
