进一步完善国际化；还有一些其他的变更

--- a/src/templates/layouts/home.njk
+++ b/src/templates/layouts/home.njk
@@ -19,9 +19,9 @@
                     </h2>
                     <p>{{ m.description }}</p>
                     <p class="tags">
-                        {% for t in m.tags %}
+                        {%- for t in m.tags -%}
                             <span class="tag">{{ t }}</span>
-                        {% endfor %}
+                        {%- endfor -%}
                     </p>
                 </article>
             {% endfor %}
