--- a/src/templates/layouts/module.njk
+++ b/src/templates/layouts/module.njk
@@ -9,11 +9,10 @@
 {% block meta_keywords %}<meta name="keywords" content="{{ config.keywords }}{% if module.tags.length %},{{ module.tags | join(',') }}{% endif %}"/>{% endblock %}
 {% block head_extra %}
     <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "SoftwareSourceCode", "name": "{{ module.name | replace('"','\"') }}",
-                                                                                              "description": "{{ module.description | replace('"','\"') }} ", "programmingLanguage": "Scratch",
+        "description": "{{ module.description | replace('"','\"') }} ", "programmingLanguage": "Scratch",
         {# 合并 tags 与 keywords，确保都是数组 #}
         {% set tags_str = module.tags | join(',') %} "keywords": "{{ tags_str }}", "url": "{{ config.baseUrl }} /{{ locale }}
-        /modules/{{ module.slug }}/"
-                                                                                            }</script>
+        /modules/{{ module.slug }}/" }</script>
 {% endblock %}
 {% block content %}
     <article class="module-detail">
