更改版权信息

--- a/src/templates/layouts/base.njk
+++ b/src/templates/layouts/base.njk
@@ -92,7 +92,9 @@
                 {% block content %}{% endblock %}
             </main>
             <footer>
-                <p>&copy; {{ year }} Scratch Modules Gallery</p>
+                <p>&copy; 2025
+                    <a href="https://github.com/LuYifei2011" target="_blank">Lu Yifei</a>
+                </p>
             </footer>
             <script>
                 window.__I18N = {{ (t or {}) | dump | safe }};
