--- a/src/templates/layouts/module.njk
+++ b/src/templates/layouts/module.njk
@@ -9,7 +9,7 @@
 {% block meta_keywords %}<meta name="keywords" content="{{ config.keywords }}{% if module.tags.length %},{{ module.tags | join(',') }}{% endif %}"/>{% endblock %}
 {% block head_extra %}
     <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "SoftwareSourceCode", "name": "{{ module.name | replace('"','\"') }}",
-                "description": "{{ module.description | replace('"','\"') }} ", "programmingLanguage": "Scratch",
+                        "description": "{{ module.description | replace('"','\"') }} ", "programmingLanguage": "Scratch",
         {# 合并 tags 与 keywords，确保都是数组 #}
         {% set tags_str = module.tags | join(',') %} "keywords": "{{ tags_str }}", "url": "{{ config.baseUrl }} /{{ locale }}
         /modules/{{ module.slug }}/" }</script>
@@ -70,7 +70,13 @@
                                 {% if s.fromIndex %}
                                     (#{{ s.fromIndex }}){% endif %}
                             </summary>
-                            <pre class="scratchblocks">{{ s.content | escape }}</pre>
+                            <div class="sb-block">
+                                <button class="sb-copy" type="button" aria-label="{{ t.module.copyScript }}" title="{{ t.module.copyScript }}">
+                                    <svg class="icon icon-copy" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path></svg>
+                                    <svg class="icon icon-check" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M9 16.2l-3.5-3.5L4 14.2l5 5 11-11-1.4-1.4z"></path></svg>
+                                </button>
+                                <pre class="scratchblocks">{{ s.content | escape }}</pre>
+                            </div>
                         </details>
                     {% else %}
                         <div class="script-block">
@@ -89,16 +95,34 @@
                                             {% if imp.fromIndex %}
                                                 (#{{ imp.fromIndex }}){% endif %}
                                         </summary>
-                                        <pre class="scratchblocks">{{ imp.content | escape }}</pre>
+                                        <div class="sb-block">
+                                            <button class="sb-copy" type="button" aria-label="{{ t.module.copyScript }}" title="{{ t.module.copyScript }}">
+                                                <svg class="icon icon-copy" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path></svg>
+                                                <svg class="icon icon-check" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M9 16.2l-3.5-3.5L4 14.2l5 5 11-11-1.4-1.4z"></path></svg>
+                                            </button>
+                                            <pre class="scratchblocks">{{ imp.content | escape }}</pre>
+                                        </div>
                                     </details>
                                 {% endfor %}
                             {% endif %}
-                            <pre class="scratchblocks">{{ s.content | escape }}</pre>
+                            <div class="sb-block">
+                                <button class="sb-copy" type="button" aria-label="{{ t.module.copyScript }}" title="{{ t.module.copyScript }}">
+                                    <svg class="icon icon-copy" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path></svg>
+                                    <svg class="icon icon-check" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M9 16.2l-3.5-3.5L4 14.2l5 5 11-11-1.4-1.4z"></path></svg>
+                                </button>
+                                <pre class="scratchblocks">{{ s.content | escape }}</pre>
+                            </div>
                         </div>
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <pre class="scratchblocks">{{ module.script | escape }}</pre>
+                <div class="sb-block">
+                    <button class="sb-copy" type="button" aria-label="{{ t.module.copyScript }}" title="{{ t.module.copyScript }}">
+                        <svg class="icon icon-copy" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path></svg>
+                        <svg class="icon icon-check" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true" focusable="false"><path fill="currentColor" d="M9 16.2l-3.5-3.5L4 14.2l5 5 11-11-1.4-1.4z"></path></svg>
+                    </button>
+                    <pre class="scratchblocks">{{ module.script | escape }}</pre>
+                </div>
             {% endif %}
         </section>
         {% if module.variables.length %}
